--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-image-picker": "^7.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
