--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
+    "buffer": "^6.0.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-camera": "^4.2.1",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-progress": "^5.0.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0"
